// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Header on desktop renders correctly 1`] = `
<Base
  className="navbar"
>
  <PlacementManager>
    <AddonBeam
      addonIcon="Ship"
      addonName="Ship"
      appImage="https://concrete-userfiles-production.s3.us-west-2.amazonaws.com/repositories/0dbc45647ce84cb9/avatar/avatar.png"
      appLink="https://app.bitrise.io/app/test-app-slug-1"
      appName="Awesome app"
      backgroundColor="grape-4"
      color="white"
      isHamburgerIconActive={false}
      isInResponsiveView={true}
      onHamburgerIconClick={[Function]}
    >
      <PlacementReference>
        <Component />
      </PlacementReference>
      <Placement
        backgroundColor="grape-1"
        visible={false}
      >
        <Component />
      </Placement>
    </AddonBeam>
  </PlacementManager>
  <Flex
    alignChildrenVertical="middle"
    className="header"
    direction="vertical"
    height="7rem"
    paddingHorizontal="x16"
    paddingVertical="x8"
    style={
      Object {
        "backgroundImage": "url('/static/header-bg.svg'), linear-gradient(90deg, #0D83CD, #0DD3C5)",
      }
    }
  >
    <_default
      title="Awesome app"
      type="other"
    />
  </Flex>
  <Flex
    alignChildrenVertical="end"
    backgroundColor="grape-5"
    className="mobileMenu"
    color="white"
    direction="vertical"
  >
    <Flex
      padding="x4"
    >
      <a
        href="https://app.bitrise.io/app/test-app-slug-1"
        target="_blank"
      >
        <Flex
          alignChildrenVertical="middle"
          direction="horizontal"
          gap="x2"
        >
          <Image
            borderRadius="x1"
            height="1.5rem"
            src="https://concrete-userfiles-production.s3.us-west-2.amazonaws.com/repositories/0dbc45647ce84cb9/avatar/avatar.png"
            width="1.5rem"
          />
          <Flex
            alignChildrenVertical="middle"
            direction="horizontal"
            gap="x1"
          >
            <Text
              size="x3"
            >
              Awesome app
            </Text>
            <Icon
              name="OpenInBrowser"
              size="1.5rem"
            />
          </Flex>
        </Flex>
      </a>
    </Flex>
    <Divider
      color="grape-4"
      direction="horizontal"
      width="0.125rem"
    />
    <Flex
      padding="x4"
    >
      <Link
        as="/apps/test-app-slug-1/settings"
        href="/settings?appSlug=test-app-slug-1"
      >
        <a>
          <Text
            color="gray-1"
            size="x3"
          >
            Settings
          </Text>
        </a>
      </Link>
    </Flex>
  </Flex>
</Base>
`;

exports[`Header on desktop renders correctly when no app is defined 1`] = `
<Flex
  absolute={true}
  alignChildrenHorizontal="middle"
  alignChildrenVertical="middle"
  backgroundColor="grape-4"
  className="simpleHeader"
  color="white"
  direction="horizontal"
  gap="x2"
  paddingHorizontal="x5"
>
  <Flex>
    <Icon
      name="Ship"
      size="1.5rem"
    />
  </Flex>
  <Flex>
    <Text
      size="x3"
    >
      <Text
        inline={true}
        weight="bold"
      >
        Ship
      </Text>
       
      by Bitrise
    </Text>
  </Flex>
</Flex>
`;

exports[`Header on desktop renders without breadcrumbs 1`] = `
<Base
  className="navbar"
>
  <PlacementManager>
    <AddonBeam
      addonIcon="Ship"
      addonName="Ship"
      appImage="https://concrete-userfiles-production.s3.us-west-2.amazonaws.com/repositories/0dbc45647ce84cb9/avatar/avatar.png"
      appLink="https://app.bitrise.io/app/test-app-slug-1"
      appName="Awesome app"
      backgroundColor="grape-4"
      color="white"
      isHamburgerIconActive={false}
      isInResponsiveView={true}
      onHamburgerIconClick={[Function]}
    >
      <PlacementReference>
        <Component />
      </PlacementReference>
      <Placement
        backgroundColor="grape-1"
        visible={false}
      >
        <Component />
      </Placement>
    </AddonBeam>
  </PlacementManager>
  <Flex
    alignChildrenVertical="end"
    backgroundColor="grape-5"
    className="mobileMenu"
    color="white"
    direction="vertical"
  >
    <Flex
      padding="x4"
    >
      <a
        href="https://app.bitrise.io/app/test-app-slug-1"
        target="_blank"
      >
        <Flex
          alignChildrenVertical="middle"
          direction="horizontal"
          gap="x2"
        >
          <Image
            borderRadius="x1"
            height="1.5rem"
            src="https://concrete-userfiles-production.s3.us-west-2.amazonaws.com/repositories/0dbc45647ce84cb9/avatar/avatar.png"
            width="1.5rem"
          />
          <Flex
            alignChildrenVertical="middle"
            direction="horizontal"
            gap="x1"
          >
            <Text
              size="x3"
            >
              Awesome app
            </Text>
            <Icon
              name="OpenInBrowser"
              size="1.5rem"
            />
          </Flex>
        </Flex>
      </a>
    </Flex>
    <Divider
      color="grape-4"
      direction="horizontal"
      width="0.125rem"
    />
    <Flex
      padding="x4"
    >
      <Link
        as="/apps/test-app-slug-1/settings"
        href="/settings?appSlug=test-app-slug-1"
      >
        <a>
          <Text
            color="gray-1"
            size="x3"
          >
            Settings
          </Text>
        </a>
      </Link>
    </Flex>
  </Flex>
</Base>
`;

exports[`Header on mobile renders correctly on mobile 1`] = `
<Base
  className="navbar"
>
  <PlacementManager>
    <AddonBeam
      addonIcon="Ship"
      addonName="Ship"
      appImage="https://concrete-userfiles-production.s3.us-west-2.amazonaws.com/repositories/0dbc45647ce84cb9/avatar/avatar.png"
      appLink="https://app.bitrise.io/app/test-app-slug-1"
      appName="Awesome app"
      backgroundColor="grape-4"
      color="white"
      isHamburgerIconActive={false}
      isInResponsiveView={true}
      onHamburgerIconClick={[Function]}
    >
      <PlacementReference>
        <Component />
      </PlacementReference>
      <Placement
        backgroundColor="grape-1"
        visible={false}
      >
        <Component />
      </Placement>
    </AddonBeam>
  </PlacementManager>
  <Flex
    alignChildrenVertical="middle"
    className="header"
    direction="vertical"
    height="7rem"
    paddingHorizontal="x4"
    paddingVertical="x8"
    style={
      Object {
        "backgroundImage": "url('/static/header-bg.svg'), linear-gradient(90deg, #0D83CD, #0DD3C5)",
      }
    }
  >
    <_default
      title="Awesome app"
      type="other"
    />
  </Flex>
  <Flex
    alignChildrenVertical="end"
    backgroundColor="grape-5"
    className="mobileMenu"
    color="white"
    direction="vertical"
  >
    <Flex
      padding="x4"
    >
      <a
        href="https://app.bitrise.io/app/test-app-slug-1"
        target="_blank"
      >
        <Flex
          alignChildrenVertical="middle"
          direction="horizontal"
          gap="x2"
        >
          <Image
            borderRadius="x1"
            height="1.5rem"
            src="https://concrete-userfiles-production.s3.us-west-2.amazonaws.com/repositories/0dbc45647ce84cb9/avatar/avatar.png"
            width="1.5rem"
          />
          <Flex
            alignChildrenVertical="middle"
            direction="horizontal"
            gap="x1"
          >
            <Text
              size="x3"
            >
              Awesome app
            </Text>
            <Icon
              name="OpenInBrowser"
              size="1.5rem"
            />
          </Flex>
        </Flex>
      </a>
    </Flex>
    <Divider
      color="grape-4"
      direction="horizontal"
      width="0.125rem"
    />
    <Flex
      padding="x4"
    >
      <Link
        as="/apps/test-app-slug-1/settings"
        href="/settings?appSlug=test-app-slug-1"
      >
        <a>
          <Text
            color="gray-1"
            size="x3"
          >
            Settings
          </Text>
        </a>
      </Link>
    </Flex>
  </Flex>
</Base>
`;

exports[`Header on mobile renders correctly when no app is defined 1`] = `
<Flex
  absolute={true}
  alignChildrenHorizontal="middle"
  alignChildrenVertical="middle"
  backgroundColor="grape-4"
  className="simpleHeader"
  color="white"
  direction="horizontal"
  gap="x2"
  paddingHorizontal="x5"
>
  <Flex>
    <Icon
      name="Ship"
      size="1.5rem"
    />
  </Flex>
  <Flex>
    <Text
      size="x3"
    >
      <Text
        inline={true}
        weight="bold"
      >
        Ship
      </Text>
       
      by Bitrise
    </Text>
  </Flex>
</Flex>
`;

exports[`Header routes /app for desktop 1`] = `
<Base
  className="navbar"
>
  <PlacementManager>
    <AddonBeam
      addonIcon="Ship"
      addonName="Ship"
      appImage="https://concrete-userfiles-production.s3.us-west-2.amazonaws.com/repositories/0dbc45647ce84cb9/avatar/avatar.png"
      appLink="https://app.bitrise.io/app/test-app-slug-1"
      appName="Awesome app"
      backgroundColor="grape-4"
      color="white"
      isHamburgerIconActive={false}
      isInResponsiveView={true}
      onHamburgerIconClick={[Function]}
    >
      <PlacementReference>
        <Component />
      </PlacementReference>
      <Placement
        backgroundColor="grape-1"
        visible={false}
      >
        <Component />
      </Placement>
    </AddonBeam>
  </PlacementManager>
  <Flex
    alignChildrenVertical="middle"
    className="header"
    direction="vertical"
    height="7rem"
    paddingHorizontal="x16"
    paddingVertical="x8"
    style={
      Object {
        "backgroundImage": "url('/static/header-bg.svg'), linear-gradient(90deg, #0D83CD, #0DD3C5)",
      }
    }
  >
    <_default
      title="Awesome app"
      type="other"
    />
  </Flex>
  <Flex
    alignChildrenVertical="end"
    backgroundColor="grape-5"
    className="mobileMenu"
    color="white"
    direction="vertical"
  >
    <Flex
      padding="x4"
    >
      <a
        href="https://app.bitrise.io/app/test-app-slug-1"
        target="_blank"
      >
        <Flex
          alignChildrenVertical="middle"
          direction="horizontal"
          gap="x2"
        >
          <Image
            borderRadius="x1"
            height="1.5rem"
            src="https://concrete-userfiles-production.s3.us-west-2.amazonaws.com/repositories/0dbc45647ce84cb9/avatar/avatar.png"
            width="1.5rem"
          />
          <Flex
            alignChildrenVertical="middle"
            direction="horizontal"
            gap="x1"
          >
            <Text
              size="x3"
            >
              Awesome app
            </Text>
            <Icon
              name="OpenInBrowser"
              size="1.5rem"
            />
          </Flex>
        </Flex>
      </a>
    </Flex>
    <Divider
      color="grape-4"
      direction="horizontal"
      width="0.125rem"
    />
    <Flex
      padding="x4"
    >
      <Link
        as="/apps/test-app-slug-1/settings"
        href="/settings?appSlug=test-app-slug-1"
      >
        <a>
          <Text
            color="gray-1"
            size="x3"
          >
            Settings
          </Text>
        </a>
      </Link>
    </Flex>
  </Flex>
</Base>
`;

exports[`Header routes /app for mobile 1`] = `
<Base
  className="navbar"
>
  <PlacementManager>
    <AddonBeam
      addonIcon="Ship"
      addonName="Ship"
      appImage="https://concrete-userfiles-production.s3.us-west-2.amazonaws.com/repositories/0dbc45647ce84cb9/avatar/avatar.png"
      appLink="https://app.bitrise.io/app/test-app-slug-1"
      appName="Awesome app"
      backgroundColor="grape-4"
      color="white"
      isHamburgerIconActive={false}
      isInResponsiveView={true}
      onHamburgerIconClick={[Function]}
    >
      <PlacementReference>
        <Component />
      </PlacementReference>
      <Placement
        backgroundColor="grape-1"
        visible={false}
      >
        <Component />
      </Placement>
    </AddonBeam>
  </PlacementManager>
  <Flex
    alignChildrenVertical="middle"
    className="header"
    direction="vertical"
    height="7rem"
    paddingHorizontal="x4"
    paddingVertical="x8"
    style={
      Object {
        "backgroundImage": "url('/static/header-bg.svg'), linear-gradient(90deg, #0D83CD, #0DD3C5)",
      }
    }
  >
    <_default
      title="Awesome app"
      type="other"
    />
  </Flex>
  <Flex
    alignChildrenVertical="end"
    backgroundColor="grape-5"
    className="mobileMenu"
    color="white"
    direction="vertical"
  >
    <Flex
      padding="x4"
    >
      <a
        href="https://app.bitrise.io/app/test-app-slug-1"
        target="_blank"
      >
        <Flex
          alignChildrenVertical="middle"
          direction="horizontal"
          gap="x2"
        >
          <Image
            borderRadius="x1"
            height="1.5rem"
            src="https://concrete-userfiles-production.s3.us-west-2.amazonaws.com/repositories/0dbc45647ce84cb9/avatar/avatar.png"
            width="1.5rem"
          />
          <Flex
            alignChildrenVertical="middle"
            direction="horizontal"
            gap="x1"
          >
            <Text
              size="x3"
            >
              Awesome app
            </Text>
            <Icon
              name="OpenInBrowser"
              size="1.5rem"
            />
          </Flex>
        </Flex>
      </a>
    </Flex>
    <Divider
      color="grape-4"
      direction="horizontal"
      width="0.125rem"
    />
    <Flex
      padding="x4"
    >
      <Link
        as="/apps/test-app-slug-1/settings"
        href="/settings?appSlug=test-app-slug-1"
      >
        <a>
          <Text
            color="gray-1"
            size="x3"
          >
            Settings
          </Text>
        </a>
      </Link>
    </Flex>
  </Flex>
</Base>
`;

exports[`Header routes /settings for desktop 1`] = `
<Base
  className="navbar"
>
  <PlacementManager>
    <AddonBeam
      addonIcon="Ship"
      addonName="Ship"
      appImage="https://concrete-userfiles-production.s3.us-west-2.amazonaws.com/repositories/0dbc45647ce84cb9/avatar/avatar.png"
      appLink="https://app.bitrise.io/app/test-app-slug-1"
      appName="Awesome app"
      backgroundColor="grape-4"
      color="white"
      isHamburgerIconActive={false}
      isInResponsiveView={true}
      onHamburgerIconClick={[Function]}
    >
      <PlacementReference>
        <Component />
      </PlacementReference>
      <Placement
        backgroundColor="grape-1"
        visible={false}
      >
        <Component />
      </Placement>
    </AddonBeam>
  </PlacementManager>
  <Flex
    alignChildrenVertical="middle"
    className="header"
    direction="vertical"
    height="7rem"
    paddingHorizontal="x16"
    paddingVertical="x8"
    style={
      Object {
        "backgroundImage": "url('/static/header-bg.svg'), linear-gradient(90deg, #0D83CD, #0DD3C5)",
      }
    }
  >
    <Link
      as="/apps/test-app-slug-1"
      href="/app?appSlug=test-app-slug-1"
    >
      <a>
        <Button
          level="light"
          size="medium"
        >
          <Icon
            name="ArrowBack"
            size="1.5rem"
          />
          <Text>
            Awesome app
          </Text>
        </Button>
      </a>
    </Link>
  </Flex>
  <Flex
    alignChildrenVertical="end"
    backgroundColor="grape-5"
    className="mobileMenu"
    color="white"
    direction="vertical"
  >
    <Flex
      padding="x4"
    >
      <a
        href="https://app.bitrise.io/app/test-app-slug-1"
        target="_blank"
      >
        <Flex
          alignChildrenVertical="middle"
          direction="horizontal"
          gap="x2"
        >
          <Image
            borderRadius="x1"
            height="1.5rem"
            src="https://concrete-userfiles-production.s3.us-west-2.amazonaws.com/repositories/0dbc45647ce84cb9/avatar/avatar.png"
            width="1.5rem"
          />
          <Flex
            alignChildrenVertical="middle"
            direction="horizontal"
            gap="x1"
          >
            <Text
              size="x3"
            >
              Awesome app
            </Text>
            <Icon
              name="OpenInBrowser"
              size="1.5rem"
            />
          </Flex>
        </Flex>
      </a>
    </Flex>
    <Divider
      color="grape-4"
      direction="horizontal"
      width="0.125rem"
    />
    <Flex
      padding="x4"
    >
      <Link
        as="/apps/test-app-slug-1/settings"
        href="/settings?appSlug=test-app-slug-1"
      >
        <a>
          <Text
            color="gray-1"
            size="x3"
          >
            Settings
          </Text>
        </a>
      </Link>
    </Flex>
  </Flex>
</Base>
`;

exports[`Header routes /settings for mobile 1`] = `
<Base
  className="navbar"
>
  <PlacementManager>
    <AddonBeam
      addonIcon="Ship"
      addonName="Ship"
      appImage="https://concrete-userfiles-production.s3.us-west-2.amazonaws.com/repositories/0dbc45647ce84cb9/avatar/avatar.png"
      appLink="https://app.bitrise.io/app/test-app-slug-1"
      appName="Awesome app"
      backgroundColor="grape-4"
      color="white"
      isHamburgerIconActive={false}
      isInResponsiveView={true}
      onHamburgerIconClick={[Function]}
    >
      <PlacementReference>
        <Component />
      </PlacementReference>
      <Placement
        backgroundColor="grape-1"
        visible={false}
      >
        <Component />
      </Placement>
    </AddonBeam>
  </PlacementManager>
  <Flex
    alignChildrenVertical="middle"
    className="header"
    direction="vertical"
    height="7rem"
    paddingHorizontal="x4"
    paddingVertical="x8"
    style={
      Object {
        "backgroundImage": "url('/static/header-bg.svg'), linear-gradient(90deg, #0D83CD, #0DD3C5)",
      }
    }
  >
    <Link
      as="/apps/test-app-slug-1"
      href="/app?appSlug=test-app-slug-1"
    >
      <a>
        <Button
          level="light"
          size="medium"
        >
          <Icon
            name="ArrowBack"
            size="1.5rem"
          />
          <Text>
            Awesome app
          </Text>
        </Button>
      </a>
    </Link>
  </Flex>
  <Flex
    alignChildrenVertical="end"
    backgroundColor="grape-5"
    className="mobileMenu"
    color="white"
    direction="vertical"
  >
    <Flex
      padding="x4"
    >
      <a
        href="https://app.bitrise.io/app/test-app-slug-1"
        target="_blank"
      >
        <Flex
          alignChildrenVertical="middle"
          direction="horizontal"
          gap="x2"
        >
          <Image
            borderRadius="x1"
            height="1.5rem"
            src="https://concrete-userfiles-production.s3.us-west-2.amazonaws.com/repositories/0dbc45647ce84cb9/avatar/avatar.png"
            width="1.5rem"
          />
          <Flex
            alignChildrenVertical="middle"
            direction="horizontal"
            gap="x1"
          >
            <Text
              size="x3"
            >
              Awesome app
            </Text>
            <Icon
              name="OpenInBrowser"
              size="1.5rem"
            />
          </Flex>
        </Flex>
      </a>
    </Flex>
    <Divider
      color="grape-4"
      direction="horizontal"
      width="0.125rem"
    />
    <Flex
      padding="x4"
    >
      <Link
        as="/apps/test-app-slug-1/settings"
        href="/settings?appSlug=test-app-slug-1"
      >
        <a>
          <Text
            color="gray-1"
            size="x3"
          >
            Settings
          </Text>
        </a>
      </Link>
    </Flex>
  </Flex>
</Base>
`;

exports[`Header routes /version for desktop 1`] = `
<Base
  className="navbar"
>
  <PlacementManager>
    <AddonBeam
      addonIcon="Ship"
      addonName="Ship"
      appImage="https://concrete-userfiles-production.s3.us-west-2.amazonaws.com/repositories/0dbc45647ce84cb9/avatar/avatar.png"
      appLink="https://app.bitrise.io/app/test-app-slug-1"
      appName="Awesome app"
      backgroundColor="grape-4"
      color="white"
      isHamburgerIconActive={false}
      isInResponsiveView={true}
      onHamburgerIconClick={[Function]}
    >
      <PlacementReference>
        <Component />
      </PlacementReference>
      <Placement
        backgroundColor="grape-1"
        visible={false}
      >
        <Component />
      </Placement>
    </AddonBeam>
  </PlacementManager>
  <Flex
    alignChildrenVertical="middle"
    className="header"
    direction="vertical"
    height="7rem"
    paddingHorizontal="x16"
    paddingVertical="x8"
    style={
      Object {
        "backgroundImage": "url('/static/header-bg.svg'), linear-gradient(90deg, #0D83CD, #0DD3C5)",
      }
    }
  >
    <Link
      as="/apps/test-app-slug-1"
      href="/app?appSlug=test-app-slug-1"
    >
      <a>
        <Button
          level="light"
          size="medium"
        >
          <Icon
            name="ArrowBack"
            size="1.5rem"
          />
          <Text>
            All versions
          </Text>
        </Button>
      </a>
    </Link>
  </Flex>
  <Flex
    alignChildrenVertical="end"
    backgroundColor="grape-5"
    className="mobileMenu"
    color="white"
    direction="vertical"
  >
    <Flex
      padding="x4"
    >
      <a
        href="https://app.bitrise.io/app/test-app-slug-1"
        target="_blank"
      >
        <Flex
          alignChildrenVertical="middle"
          direction="horizontal"
          gap="x2"
        >
          <Image
            borderRadius="x1"
            height="1.5rem"
            src="https://concrete-userfiles-production.s3.us-west-2.amazonaws.com/repositories/0dbc45647ce84cb9/avatar/avatar.png"
            width="1.5rem"
          />
          <Flex
            alignChildrenVertical="middle"
            direction="horizontal"
            gap="x1"
          >
            <Text
              size="x3"
            >
              Awesome app
            </Text>
            <Icon
              name="OpenInBrowser"
              size="1.5rem"
            />
          </Flex>
        </Flex>
      </a>
    </Flex>
    <Divider
      color="grape-4"
      direction="horizontal"
      width="0.125rem"
    />
    <Flex
      padding="x4"
    >
      <Link
        as="/apps/test-app-slug-1/settings"
        href="/settings?appSlug=test-app-slug-1"
      >
        <a>
          <Text
            color="gray-1"
            size="x3"
          >
            Settings
          </Text>
        </a>
      </Link>
    </Flex>
  </Flex>
</Base>
`;

exports[`Header routes /version for mobile 1`] = `
<Base
  className="navbar"
>
  <PlacementManager>
    <AddonBeam
      addonIcon="Ship"
      addonName="Ship"
      appImage="https://concrete-userfiles-production.s3.us-west-2.amazonaws.com/repositories/0dbc45647ce84cb9/avatar/avatar.png"
      appLink="https://app.bitrise.io/app/test-app-slug-1"
      appName="Awesome app"
      backgroundColor="grape-4"
      color="white"
      isHamburgerIconActive={false}
      isInResponsiveView={true}
      onHamburgerIconClick={[Function]}
    >
      <PlacementReference>
        <Component />
      </PlacementReference>
      <Placement
        backgroundColor="grape-1"
        visible={false}
      >
        <Component />
      </Placement>
    </AddonBeam>
  </PlacementManager>
  <Flex
    alignChildrenVertical="middle"
    className="header"
    direction="vertical"
    height="7rem"
    paddingHorizontal="x4"
    paddingVertical="x8"
    style={
      Object {
        "backgroundImage": "url('/static/header-bg.svg'), linear-gradient(90deg, #0D83CD, #0DD3C5)",
      }
    }
  >
    <Link
      as="/apps/test-app-slug-1"
      href="/app?appSlug=test-app-slug-1"
    >
      <a>
        <Button
          level="light"
          size="medium"
        >
          <Icon
            name="ArrowBack"
            size="1.5rem"
          />
          <Text>
            All versions
          </Text>
        </Button>
      </a>
    </Link>
  </Flex>
  <Flex
    alignChildrenVertical="end"
    backgroundColor="grape-5"
    className="mobileMenu"
    color="white"
    direction="vertical"
  >
    <Flex
      padding="x4"
    >
      <a
        href="https://app.bitrise.io/app/test-app-slug-1"
        target="_blank"
      >
        <Flex
          alignChildrenVertical="middle"
          direction="horizontal"
          gap="x2"
        >
          <Image
            borderRadius="x1"
            height="1.5rem"
            src="https://concrete-userfiles-production.s3.us-west-2.amazonaws.com/repositories/0dbc45647ce84cb9/avatar/avatar.png"
            width="1.5rem"
          />
          <Flex
            alignChildrenVertical="middle"
            direction="horizontal"
            gap="x1"
          >
            <Text
              size="x3"
            >
              Awesome app
            </Text>
            <Icon
              name="OpenInBrowser"
              size="1.5rem"
            />
          </Flex>
        </Flex>
      </a>
    </Flex>
    <Divider
      color="grape-4"
      direction="horizontal"
      width="0.125rem"
    />
    <Flex
      padding="x4"
    >
      <Link
        as="/apps/test-app-slug-1/settings"
        href="/settings?appSlug=test-app-slug-1"
      >
        <a>
          <Text
            color="gray-1"
            size="x3"
          >
            Settings
          </Text>
        </a>
      </Link>
    </Flex>
  </Flex>
</Base>
`;

exports[`Header when settings onboarding should be shown shows the notification 1`] = `
<Base
  className="navbar"
>
  <PlacementManager>
    <AddonBeam
      addonIcon="Ship"
      addonName="Ship"
      appImage="https://concrete-userfiles-production.s3.us-west-2.amazonaws.com/repositories/0dbc45647ce84cb9/avatar/avatar.png"
      appLink="https://app.bitrise.io/app/test-app-slug-1"
      appName="Awesome app"
      backgroundColor="grape-4"
      color="white"
      isHamburgerIconActive={false}
      isInResponsiveView={true}
      onHamburgerIconClick={[Function]}
    >
      <PlacementReference>
        <Component />
      </PlacementReference>
      <Placement
        backgroundColor="grape-1"
        visible={true}
      >
        <Component />
      </Placement>
    </AddonBeam>
  </PlacementManager>
  <Flex
    alignChildrenVertical="middle"
    className="header"
    direction="vertical"
    height="7rem"
    paddingHorizontal="x16"
    paddingVertical="x8"
    style={
      Object {
        "backgroundImage": "url('/static/header-bg.svg'), linear-gradient(90deg, #0D83CD, #0DD3C5)",
      }
    }
  >
    <_default
      title="Awesome app"
      type="other"
    />
  </Flex>
  <Flex
    alignChildrenVertical="end"
    backgroundColor="grape-5"
    className="mobileMenu"
    color="white"
    direction="vertical"
  >
    <Flex
      padding="x4"
    >
      <a
        href="https://app.bitrise.io/app/test-app-slug-1"
        target="_blank"
      >
        <Flex
          alignChildrenVertical="middle"
          direction="horizontal"
          gap="x2"
        >
          <Image
            borderRadius="x1"
            height="1.5rem"
            src="https://concrete-userfiles-production.s3.us-west-2.amazonaws.com/repositories/0dbc45647ce84cb9/avatar/avatar.png"
            width="1.5rem"
          />
          <Flex
            alignChildrenVertical="middle"
            direction="horizontal"
            gap="x1"
          >
            <Text
              size="x3"
            >
              Awesome app
            </Text>
            <Icon
              name="OpenInBrowser"
              size="1.5rem"
            />
          </Flex>
        </Flex>
      </a>
    </Flex>
    <Divider
      color="grape-4"
      direction="horizontal"
      width="0.125rem"
    />
    <Flex
      padding="x4"
    >
      <Link
        as="/apps/test-app-slug-1/settings"
        href="/settings?appSlug=test-app-slug-1"
      >
        <a>
          <Text
            color="gray-1"
            size="x3"
          >
            Settings
          </Text>
        </a>
      </Link>
    </Flex>
  </Flex>
</Base>
`;
